Revert "Fix scrollbar for "traffic" card"
This reverts commit b00da0d260714a90b83684799716e587ca4df978.

--- a/src/app/pages/e-commerce/traffic-reveal-card/back-side/traffic-back-card.component.scss
+++ b/src/app/pages/e-commerce/traffic-reveal-card/back-side/traffic-back-card.component.scss
@@ -1,10 +1,16 @@
 @import '../../../../@theme/styles/themes';
 
 @include nb-install-component() {
-  display: block;
-  height: 100%;
-  overflow: hidden;
-  position: relative;
+  display: flex;
+  flex-direction: column;
+  flex: 1;
+
+  nb-card-body {
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+  }
 
   ngx-traffic-bar-chart {
     flex: 1;
